--- a/eventuretime/events/static/css/bootstrap.css
+++ b/eventuretime/events/static/css/bootstrap.css
@@ -201,6 +201,7 @@ th {
   a,
   a:visited {
     text-decoration: underline;
+    color: #1baba7;
   }
   a[href]:after {
     content: " (" attr(href) ")";
